# research-environment

Sandbox/: copy.txt
Sandbox/MyApps/: Apps.sln  UpgradeLog2.htm
Sandbox/MyApps/notepadwinforms/: Form1.cs
Sandbox/MyApps/notepadwpf/: AboutDialog.cs  ChooseFont.cs  ChooseFont.csproj  ChooseFont.sln  FindReplaceDialog.cs  FontDialog.cs  Lister.cs  NotepadClone.cs  NotepadCloneAssemblyInfo.cs  NotepadWPF.csproj  PageMarginsDialog.cs  PrintWithMargins.cs  PrintWithMargins.csproj  PrintWithMargins.sln  TextBoxWithLister.cs
Sandbox/MyApps/nslookup/: AssemblyInfo.cs  NSLookup.csproj  README.md
Sandbox/msripv6-src-1.4/: dirs  license.htm  license.txt  readme.htm
Sandbox/msripv6-src-1.4/6to4cfg/: 6to4cfg.c  echo.c  ipv6.c  sources
Sandbox/msripv6-src-1.4/docs/: 6bone.htm  6to4.htm  config.htm
Sandbox/msripv6-src-1.4/hdrtest/: hdrtest.cpp  sources
Sandbox/msripv6-src-1.4/hmactest/: hmactest.c  sources
Sandbox/msripv6-src-1.4/igmptest/: igmptest.c  readme.txt  sources
Sandbox/msripv6-src-1.4/inc/: icmp6.h  ip6.h  ip6addr.h  ip6exp.h  ipsec.h  ntddip6.h  ntddnapt.h  ntddtcp.h  packoff.h  packon.h  tcp6info.h  tcpinfo.h  tdi.h  tdistat.h  ws2ip6.h  ws2tcpip.h
base/Applications/runtimeplus/UNIX/samples/: Makefile.am
books/inside-msbuild/: FxCop_Examples.proj  HandleErrors01.proj  MSBuildExamples.sln  MSBuild_35.proj  README.md  README.txt  ReservedProperties.proj  empty.txt  macros.txt
iron/: .gitignore  IRONROOT.sentinel  README.txt  build-tools.ps1  def.ps1  makefile
iron/boot/: boot-cp.cmd  boothosts.txt
verify/: README.txt  build.ps1  def.ps1  env.ps1
(+4864 files in other folders)
